Ajuste nos reporitories que utilizavam o método .toList()
Estava retornando uma lista imutável