@@ -1,21 +1,25 @@
 package fag.com.folhapagamento.infra.jakarta.repositories;
 
 import fag.com.folhapagamento.core.dtos.ColaboradorDescontoDTO;
+import fag.com.folhapagamento.core.entities.ColaboradorDescontoBO;
 import fag.com.folhapagamento.core.mappers.ColaboradorDescontoMapper;
 import fag.com.folhapagamento.core.usecases.colaborador.desconto.ListarColaboradorDesconto;
 import fag.com.folhapagamento.infra.jakarta.mappers.JakartaColaboradorDescontoMapper;
+import fag.com.folhapagamento.infra.jakarta.mappers.JakartaColaboradorMapper;
 import fag.com.folhapagamento.infra.jakarta.models.JakartaColaboradorDesconto;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.NoResultException;
 import jakarta.persistence.TypedQuery;
+import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.jpa.repository.support.SimpleJpaRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
-public class JakartaColaboradorDescontoRepository extends SimpleJpaRepository<JakartaColaboradorDesconto,Long> implements ListarColaboradorDesconto {
+public class JakartaColaboradorDescontoRepository extends SimpleJpaRepository<JakartaColaboradorDesconto, Long> implements ListarColaboradorDesconto {
 
     private final EntityManager em;
 
@@ -25,11 +29,22 @@ public class JakartaColaboradorDescontoRepository extends SimpleJpaRepository<Ja
         this.em = em;
     }
 
+    @Transactional
+    public ColaboradorDescontoBO persist(ColaboradorDescontoBO bo) {
+        JakartaColaboradorDesconto entity = JakartaColaboradorDescontoMapper.toEntity(bo);
+        entity.setColaborador(JakartaColaboradorMapper.toEntity(bo.getColaborador(), true));
+
+        em.persist(entity);
+        em.flush();
+
+        return JakartaColaboradorDescontoMapper.toDomain(entity);
+    }
+
     @Override
     public List<ColaboradorDescontoDTO> listAll() {
         List<JakartaColaboradorDesconto> colaboradorDescontos = this.findAll();
 
-        return colaboradorDescontos.stream().map(colaboradorDesconto -> ColaboradorDescontoMapper.toDTO(JakartaColaboradorDescontoMapper.toDomain(colaboradorDesconto))).toList();
+        return colaboradorDescontos.stream().map(colaboradorDesconto -> ColaboradorDescontoMapper.toDTO(JakartaColaboradorDescontoMapper.toDomain(colaboradorDesconto))).collect(Collectors.toList());
     }
 
     @Override
@@ -38,7 +53,7 @@ public class JakartaColaboradorDescontoRepository extends SimpleJpaRepository<Ja
                 .setParameter("id", id);
 
         try {
-            return query.getResultList().stream().map(colaboradorDesconto -> ColaboradorDescontoMapper.toDTO(JakartaColaboradorDescontoMapper.toDomain(colaboradorDesconto))).toList();
+            return query.getResultList().stream().map(colaboradorDesconto -> ColaboradorDescontoMapper.toDTO(JakartaColaboradorDescontoMapper.toDomain(colaboradorDesconto))).collect(Collectors.toList());
         } catch (NoResultException e) {
             return null;
         }
